Undo after leaving sculpt mode through object mode menu blender loses sculpted mesh #37796

Closed
opened 2013-12-13 01:30:07 +01:00 by Antonis Ryakiotakis · 18 comments

System Information
Operating system and graphics card
Ubuntu 13.10, Windows 7 64 bit
NVIDIA 540 GM

Blender Version
669b590229

Short description of error
Undoing after exiting to object mode can forgo the changes done in sculpt mode

Exact steps for others to reproduce the error
Default cube:

  1. Enter Sculpt mode
  2. Sculpt
  3. Exit to object mode through the object mode menu
  4. Undo

We get back to sculpt mode but sculpted mesh is lost

Seems to be some kind of conflict between the two undo stacks? My crude impression (may be completely wrong here) is that the global object mode change undo is pushed before the sculpt mode changes are flushed to the object data.

**System Information** Operating system and graphics card Ubuntu 13.10, Windows 7 64 bit NVIDIA 540 GM **Blender Version** 669b5902298f0f8015 **Short description of error** Undoing after exiting to object mode can forgo the changes done in sculpt mode **Exact steps for others to reproduce the error** Default cube: 1) Enter Sculpt mode 3) Sculpt 4) Exit to object mode through the object mode menu 5) Undo We get back to sculpt mode but sculpted mesh is lost Seems to be some kind of conflict between the two undo stacks? My crude impression (may be completely wrong here) is that the global object mode change undo is pushed before the sculpt mode changes are flushed to the object data.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi
Antonis Ryakiotakis self-assigned this 2013-12-13 01:30:37 +01:00

Added subscriber: @sourvinos

Added subscriber: @sourvinos

I can confirm the issue on Mac OS X 10.9, ATI Radeon 4850.

'Sadly' it occurs only sometimes, most of the times all works fine in my experience.

Thank you,
paolo

I can confirm the issue on Mac OS X 10.9, ATI Radeon 4850. 'Sadly' it occurs only sometimes, most of the times all works fine in my experience. Thank you, paolo

Added subscriber: @NGMAT

Added subscriber: @NGMAT

I experienced this today in official 2.69 build. win 7

I experienced this today in official 2.69 build. win 7

The same issue occurred to me while in dyna-sculpt, undoing an action via the undo stack.
All the sculpting lost till last opening.

The same issue occurred to me while in dyna-sculpt, undoing an action via the undo stack. All the sculpting lost till last opening.

This issue was referenced by ea6620cb82

This issue was referenced by ea6620cb822ff1fa56c8916fe39b18f32484e512
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit ea6620cb82.

Closed by commit ea6620cb82.

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek

Whoah! I just had this issue under 2.79 Mac and with Multires sculpt. Sculpted obj 1, Sculpted obj2, edit object 3, make mistake, hit undo, Object one sculpt lost completely.

Whoah! I just had this issue under 2.79 Mac and with Multires sculpt. Sculpted obj 1, Sculpted obj2, edit object 3, make mistake, hit undo, Object one sculpt lost completely.

Added subscriber: @MichaelC

Added subscriber: @MichaelC

Hi all! Just had the same problem. My situation (Blender 3.0.1): had a few separated objects, done multires to one and copied to others with Ctrl+L. The one that was with original multires works fine, the others no - once you switch to Object mode after sculpting all of the progress is undone. The obvious solution was to remove multires modifier and apply it again. Problem was solved.

Hi all! Just had the same problem. My situation (Blender 3.0.1): had a few separated objects, done multires to one and copied to others with Ctrl+L. The one that was with original multires works fine, the others no - once you switch to Object mode after sculpting all of the progress is undone. The obvious solution was to remove multires modifier and apply it again. Problem was solved.

Added subscriber: @MaxSonicUA

Added subscriber: @MaxSonicUA

The same issue on my computer with Blender 3.3.1.

Operating system: Mac OS Monterey 12.6 / MacBook Pro 16 (2019)
Graphics card: AMD Radeon Pro 5500M 4 GB
Intel UHD Graphics 630 1536 MB

Please help. Thank you!

The same issue on my computer with Blender 3.3.1. Operating system: Mac OS Monterey 12.6 / MacBook Pro 16 (2019) Graphics card: AMD Radeon Pro 5500M 4 GB Intel UHD Graphics 630 1536 MB Please help. Thank you!

Added subscriber: @irdumb

Added subscriber: @irdumb

Also just had this issue with Blender 3.3.1.

Operating system: Mac OS Monterey 12.6 / MacBook Pro (15-inch, 2016)
Graphics card: AMD Radeon Pro 455 2 GB
Intel HD Graphics 530 1536 MB

Also just had this issue with Blender 3.3.1. Operating system: Mac OS Monterey 12.6 / MacBook Pro (15-inch, 2016) Graphics card: AMD Radeon Pro 455 2 GB Intel HD Graphics 530 1536 MB
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37796
No description provided.